# ridgeback-

./: README.md
share/actionlib/cmake/: actionlibConfig.cmake
share/actionlib_msgs/cmake/: actionlib_msgsConfig.cmake
share/amcl/cmake/: amclConfig.cmake
share/atlas_moveit_config/cmake/: atlas_moveit_configConfig.cmake
share/atlas_v3_moveit_config/cmake/: atlas_v3_moveit_configConfig.cmake
share/base_local_planner/cmake/: base_local_plannerConfig.cmake
share/baselib_binding/cmake/: baselib_bindingConfig.cmake
share/baxter_ikfast_left_arm_plugin/cmake/: baxter_ikfast_left_arm_pluginConfig.cmake
share/baxter_ikfast_right_arm_plugin/cmake/: baxter_ikfast_right_arm_pluginConfig.cmake
share/bhand_controller/cmake/: bhand_controllerConfig.cmake
share/clam_moveit_config/cmake/: clam_moveit_configConfig.cmake
share/clear_costmap_recovery/cmake/: clear_costmap_recoveryConfig.cmake
share/control_toolbox/cmake/: control_toolboxConfig.cmake
share/controller_interface/cmake/: controller_interfaceConfig.cmake
share/controller_manager/cmake/: controller_managerConfig.cmake
share/controller_manager_msgs/cmake/: controller_manager_msgsConfig.cmake
share/convenience_math_functions/cmake/: convenience_math_functionsConfig.cmake
share/convenience_ros_functions/cmake/: convenience_ros_functionsConfig.cmake
share/costmap_2d/cmake/: costmap_2dConfig.cmake
share/fcl/cmake/: fclConfig.cmake
share/ridgeback_firmware/: package.xml
share/ridgeback_firmware/cmake/: ridgeback_firmwareConfig.cmake
ur_ws (2)/devel/: setup.sh
ur_ws/devel/: .catkin  .rosinstall
(+329 files in other folders)
