<?xml version="1.0"?>
<package>
  <name>ridgeback_firmware</name>
  <version>0.1.2</version>
  <description>Firmware for Ridgeback's microcontroller.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>Clearpath Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>stm32plus-small-f4-25000000</build_depend>
  <build_depend>firmware_components</build_depend>
  <build_depend>rosbash</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>ridgeback_msgs</build_depend>
  <run_depend>dfu-util</run_depend>

  <export>
  </export>
</package>
